// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeAutocompleteFormControlOptions should normalize complex autocomplete form control options 1`] = `
{
  "backend": {
    "kind": "nestjs",
    "module": null,
    "prefix": null,
    "project": null,
    "serverId": null,
  },
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "identifier": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "code",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    "source": null,
  },
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/autocomplete",
      "name": "MatAutocompleteModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "autocomplete-table-select",
      "name": "AutocompleteOptionsFormMethodDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "autocomplete",
  "label": null,
  "memberList": [],
  "name": "country",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [
    {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "name",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
    {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "code",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  ],
  "replace": false,
  "resolver": {
    "upstream": {
      "isService": false,
      "kind": "open-api",
      "mapper": null,
      "operationId": "country-controller-getOne",
      "scope": null,
    },
  },
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "autocomplete-form-control.hbs",
  "toDisplay": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "name",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "string",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "toValue": {
    "property": {
      "isArray": false,
      "isOptional": false,
      "memberList": [],
      "name": "code",
      "source": null,
      "type": {
        "defaultImport": null,
        "isTypeOnly": false,
        "moduleSpecifier": null,
        "name": "unknown",
        "namedImport": null,
        "namespaceImport": null,
      },
    },
  },
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": {
    "isService": false,
    "kind": "open-api",
    "mapper": null,
    "operationId": "country-controller-getAll",
    "scope": null,
  },
  "validatorList": [],
}
`;

exports[`NormalizeAutocompleteFormControlOptions should normalize minimal autocomplete form control options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "componentName": null,
  "context": null,
  "controllerName": "test-form",
  "directory": null,
  "feature": null,
  "formField": {
    "cssClass": null,
    "directiveList": [],
    "hasClearButton": true,
    "label": null,
    "prefixButton": null,
    "suffixButton": {
      "directiveList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@rxap/material-form-system",
          "name": "rxapInputClearButton",
          "namedImport": "InputClearButtonDirective",
          "namespaceImport": null,
        },
      ],
      "icon": "clear",
      "importList": [
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/icon",
          "name": "MatIconModule",
          "namedImport": null,
          "namespaceImport": null,
        },
        {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": "@angular/material/button",
          "name": "MatButtonModule",
          "namedImport": null,
          "namespaceImport": null,
        },
      ],
      "svgIcon": null,
    },
  },
  "formName": "test-form",
  "handlebars": [Function],
  "identifier": null,
  "importList": [
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/input",
      "name": "MatInputModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/autocomplete",
      "name": "MatAutocompleteModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "autocomplete-table-select",
      "name": "AutocompleteOptionsFormMethodDirective",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/icon",
      "name": "MatIconModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/material/button",
      "name": "MatButtonModule",
      "namedImport": null,
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@rxap/material-form-system",
      "name": "rxapInputClearButton",
      "namedImport": "InputClearButtonDirective",
      "namespaceImport": null,
    },
    {
      "defaultImport": null,
      "isTypeOnly": false,
      "moduleSpecifier": "@angular/forms",
      "name": "ReactiveFormsModule",
      "namedImport": null,
      "namespaceImport": null,
    },
  ],
  "isArray": false,
  "isDisabled": false,
  "isOptional": false,
  "isReadonly": false,
  "isRequired": false,
  "kind": "autocomplete",
  "label": null,
  "memberList": [],
  "name": "testAuto",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "prefix": null,
  "project": "ui-lib",
  "propertyList": [],
  "replace": false,
  "resolver": null,
  "role": "control",
  "scope": null,
  "shared": false,
  "source": null,
  "state": null,
  "template": "autocomplete-form-control.hbs",
  "toDisplay": null,
  "toValue": null,
  "type": {
    "defaultImport": null,
    "isTypeOnly": false,
    "moduleSpecifier": null,
    "name": "unknown",
    "namedImport": null,
    "namespaceImport": null,
  },
  "upstream": null,
  "validatorList": [],
}
`;
